--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
+<!DOCTYPE html>
+<html>
+   <head>
+    <!--Titre-->
+    <title>Recette</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="recette.css"/>
 
+    <!--Code du CSS de la page-->
+   </head>
+
+   <body>
+
+
+    <div class="contenu">
+        <!--Contenu de la page-->
+
+        <div class="centre categorie">
+            <p class="categorie">Recette</p>
+        </div>
+    
+
+        <h1><b>Le gâteau au chocolat</b></h1>
+
+        <div class="separateur"></div>
+
+        <div class="centre">
+            <p class="description">
+                "Cette recette facile du gâteau au chocolat est un grand classique.
+                Elle fera plasir aux gourmands."
+            </p>
+        </div>
+
+        <div class="info">
+            <!--Implémentation de l'image du gâteau au chocolat-->
+            <img class="centre info" src="gateaufinal.jpg">
+
+            <!--Table de la recette-->
+            <table class="info">
+                <tr>
+                    <th><b>Difficulté</b></th>
+                    <th><b>Préparation</b></th>
+                    <th><b>Cuisson</b></th>
+                    <th><b>Temps total</b></th>
+                </tr>
+
+                <tr>
+                    <td>Facile</td>
+                    <td>10 min</td>
+                    <td>25 min</td>
+                    <td>35 min</td>
+                </tr>
+            </table>
+    </div>
+
+    <div>
+        <div class="colonne1 colonne">
+            <!--Liste (ul) des ingrédients-->
+            <h2><b>Ingrédients</b></h2>
+            <div class="liste_ingredients">
+                <p>Chocolat noir : 200g</p>
+                <p>Sucre : 150g</p>
+                <p>Beurre : 200g</p>
+                <p>Oeufs: 4</p>
+                <p>Farine : 80g</p>
+            </div>
+        </div>
+
+        <div class="colonne2 colonne">
+            <h2>Préparation</h2>
+            <table class="preparation">
+                </tr>
+                <tr>
+                    <td><p class="numero">1</p></td>
+                    <td class="preparation_etape">Faire fondre le chocolat avec le beurre</td>
+                </tr>
+                <tr>
+                    <td><p class="numero">2</p></td>
+                    <td class="preparation_etape">Mélanger le sucre, les oeufs et la farine</td>
+                </tr>
+                <tr>
+                    <td><p class="numero">3</p></td>
+                    <td class="preparation_etape">Mélanger le tout pour faire une pâte</td>
+                </tr>
+                <tr>
+                    <td><p class="numero">4</p></td>
+                    <td class="preparation_etape">Mettre au four</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+   </body>
+</html>
+
+    
