--- a/recette.html
+++ b/recette.html
@@ -4,6 +4,11 @@
     <!--Titre-->
     <title>Recette</title>
     <meta charset="UTF-8">
+
+    <!--Ligne de code pour le responsive design-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Ligne de core pour lier ce fichier à son fichier css-->
     <link rel="stylesheet" href="recette.css"/>
 
     <!--Code du CSS de la page-->
